update file name and add popup test

--- a/WebContent/css/main.css
+++ b/WebContent/css/main.css
@@ -4,9 +4,12 @@ body {
 
 .top {
   height: 15%;
-  background-color: black;
+  background-color: #f2e9db;
 }
 
+.toptable {
+  float: right;
+}
 .center {
   height: 70%;
 }
